--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <h1>Samikchhya Chalise</h1> <a href="contact.html">contact </a>
-    <a href="https://www.instagram.com/_sameyy_/" target="_blank">visit</a>
+    <a href="instagram.com/_sameyy_/" target="_blank">visit</a>
     <a href="# visit"> visit</a>
     <!-- <img
       src="https://plus.unsplash.com/premium_photo-1676009648296-227e4bdf495a?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=388&q=80"
@@ -23,7 +23,7 @@
         <td>
           <h2>About me</h2>
           <p>Hi! My name is Samikchhya Chalise, I am 20 year old currently residing in Nayabasti,Boudha. I am currently
-            enrolled in BIT program at Herad College Kathmandu. I passed out my SEE examination from Paragon Public
+            enrolled in BIT program at Herald College Kathmandu. I passed out my SEE examination from Paragon Public
             School and high school from Kathmandu World School.</p>
         </td>
       </tr>
